--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="left">
             <h4>
                 <a href="index.html">
-                    Cric<div>Info</div> 
+                    <div><img class="logo" src="assets/cricket_ball.png" alt=""></div>
+                    <div>Cric</div><div>Info</div> 
                 </a>
             </h4>
         </div>
