--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h4>
                 <a href="index.html">
                     <div><img class="logo" src="assets/cricket_ball.png" alt=""></div>
-                    <div>Cric</div><div>Info</div> 
+                    <div id="cric">Cric</div><div>Info</div> 
                 </a>
             </h4>
         </div>
